--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,5 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=d5ec015b3582f661cf246a15d089113a
 ###< symfony/framework-bundle ###
+APP_ENV=dev
+APP_DEBUG=1
