parameters in .env

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ MAILER_DSN=null://null
 
 OPENWEATHER_API_KEY=xxxxxxxxx
 WEATHERAPI_KEY=xxxxxxxxx
+METEO_NAME=PoitiersEnv
+METEO_LATITUDE=46.58
+METEO_LONGITUDE=0.34
+YOUR_FLOAT_PARAMETER=3.14
