moved DTO classes, added Timezone to paramters

--- a/.env
+++ b/.env
@@ -34,4 +34,5 @@ WEATHERAPI_KEY=xxxxxxxxx
 METEO_NAME=Poitiers
 METEO_LATITUDE=46.58
 METEO_LONGITUDE=0.34
+METEO_TIMEZONE='Europe/Paris'
 YOUR_FLOAT_PARAMETER=3.14
