--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@
 .DS_Store
 **/.DS_Store
 
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
