--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.82",
         "phpstan/phpstan": "^2.1.17",
         "phpunit/phpunit": "^9.6.23",
         "symfony/browser-kit": "7.2.*",
