--- a/composer.json
+++ b/composer.json
@@ -84,8 +84,8 @@
     "post-update-cmd": [
       "@auto-scripts"
     ],
-    "cs": "php-cs-fixer fix --dry-run --diff",
-    "cs-fix": "php-cs-fixer fix",
+    "cs": "php-cs-fixer fix src --dry-run --diff",
+    "cs-fix": "php-cs-fixer fix src ",
     "stan": "phpstan analyse src"
   },
   "conflict": {
