--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+        - meteo
 
 when@dev:
     monolog:
@@ -10,6 +11,7 @@ when@dev:
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
+
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
             #firephp:
@@ -22,7 +24,11 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
-
+            meteohandler:
+                type: stream
+                path: "%kernel.logs_dir%/meteo_%kernel.environment%.json"
+                channels: [meteo]
+                formatter: monolog.formatter.json
 when@test:
     monolog:
         handlers:
@@ -54,7 +60,7 @@ when@prod:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
+                channels: ["!event", "!doctrine", "!meteochannel"]
             deprecation:
                 type: stream
                 channels: [deprecation]
