--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+OPENWEATHER_API_KEY=9d88f76a6ffabbefafb79311bbbb81ff
+WEATHERAPI_KEY=38b7ec8085434caea6b61838251905
+IDE='phpstorm'
+METEO_CACHE=0
