--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
     ],
     "cs": "php-cs-fixer fix src --dry-run --diff",
     "cs-fix": "php-cs-fixer fix src ",
-    "stan": "phpstan analyse src"
+    "stan": "phpstan analyse src",
+    "test": "bin/phpunit tests"
   },
   "conflict": {
     "symfony/symfony": "*"
