ExceptionSubscriber pour etre informé des erreurs système

--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ METEO_LONGITUDE=0.34
 METEO_TIMEZONE='Europe/Paris'
 IDE='phpstorm'
 METEO_CACHE=1
+
+MAILER_SENDER=xxxxxxxxx
+MAILER_DSN=xxxxxxxxx
