--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,7 @@ parameters:
     meteo_latitude: '%env(float:METEO_LATITUDE)%'
     meteo_longitude: '%env(float:METEO_LONGITUDE)%'
     meteo_timezone: '%env(METEO_TIMEZONE)%'
+    mailer_sender: '%env(resolve:MAILER_SENDER)%'
 
 
 services:
